fix truncated select list

--- a/src/modules/Forms/Controls/index.scss
+++ b/src/modules/Forms/Controls/index.scss
@@ -8,15 +8,16 @@ $scaleRatio: 1.25;
 }
 
 .tf-select .bp3-popover {
-  position: absolute;
-  top: .125rem;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: .001px solid #202B33;
-  box-shadow: 2px 4px 2px 2px rgba(16, 22, 26, 0.4);
+  max-width: 16.5rem;
+  border: .1px solid #202B33;
+  box-shadow: 2px 4px 6px 2px rgba(16, 22, 26, 0.4);
   .bp3-popover-content {
     padding: 0;
   }
+}
+
+.bp3-dark .bp3-menu {
+  background-color:#293742;
 }
 
 @media(min-width: $breakpoints-phone) and (max-width: $breakpoints-desktop) {
